Fix bugs: Animation skips on model settings save. Animation toolbar off-center.

--- a/web/gnome/webgnome/webgnome/static/css/model.css
+++ b/web/gnome/webgnome/webgnome/static/css/model.css
@@ -31,6 +31,10 @@ ul.dynatree-container {
     padding-top: 0;
 }
 
+#main-content {
+    margin-left: 10px;
+}
+
 .ui-slider .ui-slider-handle {
     height: 1em;
 }
